k8s/sandbox/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.sandbox.roche.scaf.sixfeetup.com`)
      priority: 10
      services:
        - name: backend
          port: 8000
  tls:
    secretName: cluster-cert-tls
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextjs.roche.scaf.sixfeetup.com`)
      priority: 10
      services:
        - name: frontend
          port: 3000
  tls:
    secretName: cluster-cert-tls
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.sandbox.roche.scaf.sixfeetup.com`)
      priority: 10
      services:
        - name: backend
          port: 8000
  tls:
    secretName: cluster-cert-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-to-https-redirect
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      middlewares:
        - name: redirect-to-https
      services:
        - kind: TraefikService
          name: noop@internal
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
